<resources>
    <string name="app_name">WanAndroid</string>
    <string name="title_home">首页</string>
    <string name="title_system">体系</string>
    <string name="title_project">项目</string>
    <string name="title_qa">问答</string>
    <string name="title_mine">我的</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_found">发现</string>
</resources>