<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.everdeng.android.app.wanandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_system"
        android:name="com.everdeng.android.app.wanandroid.ui.system.SystemFragment"
        android:label="@string/title_system"
        tools:layout="@layout/fragment_system" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.everdeng.android.app.wanandroid.ui.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_qa"
        android:name="com.everdeng.android.app.wanandroid.ui.qa.QAFragment"
        android:label="@string/title_qa"
        tools:layout="@layout/fragment_qa" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.everdeng.android.app.wanandroid.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>